libs/@local/hashql/ast/tests/ui/lower/type-extractor/definition/global-generic-constraint-too-many.jsonc
//@ run: fail
//@ description: Tests that an error is properly reported when a generic type is provided with too many type parameters
[
  "type",
  "Foo",
  "Some<String, Number>",
  //~^ ERROR Remove this argument
  "_"
]
